# gravatar/src/main/java/com/gravatar/api/models/ProfileBackground.kt
@@ -1,24 +1,0 @@
-/**
- *
- * Please note:
- * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * Do not edit this file manually.
- *
- */
-package com.gravatar.api.models
-
-import com.google.gson.annotations.SerializedName
-
-/**
- *
- *
- * @param color
- * @param url
- */
-
-public data class ProfileBackground(
-    @SerializedName("color")
-    val color: kotlin.String,
-    @SerializedName("url")
-    val url: kotlin.String,
-)
